--- a/config/sample_configs/config.sample.gauss.json
+++ b/config/sample_configs/config.sample.gauss.json
@@ -275,7 +275,7 @@
                         0.35,
                         0.45
                     ],
-                    "test": "chi-square-test",
+                    "test": "cg-lr-test",
                     "datatype": "continuous"
                 },
                 {
@@ -320,7 +320,7 @@
                         0.45
                     ],
                     "score": "cg-bic-score",
-                    "test": "chi-square-test",
+                    "test": "cg-lr-test",
                     "datatype": "continuous",
                     "structurePrior": 1
                 }
@@ -337,7 +337,7 @@
                         0.35,
                         0.45
                     ],
-                    "test": "chi-square-test",
+                    "test": "cg-lr-test",
                     "datatype": "continuous"
                 },
                 {
