--- a/config/sample_configs/config.sample.binary.json
+++ b/config/sample_configs/config.sample.binary.json
@@ -51,7 +51,7 @@
                     "curve_variable": "alpha"
                 },
                 {
-                    "algorithm_id": "gfci-disc",
+                    "algorithm_id": "gfci-bdeu",
                     "curve_variable": "alpha"
                 },
                 {
@@ -95,7 +95,7 @@
                 {
                     "id": "independent_samples",
                     "sample_sizes": [
-                        80, 160, 320, 640
+                        80
                     ]
                 },
                 {
@@ -121,7 +121,7 @@
                         2
                     ],
                     "dims": [
-                        80
+                       80, 160, 320, 640
                     ]
                 }
             ]
