--- a/config/sample_configs/config.sample.binary.json
+++ b/config/sample_configs/config.sample.binary.json
@@ -420,7 +420,12 @@
                         0.2,
                         0.35,
                         0.45
-                    ]
+                    ],
+                    "test":"mi",
+                    "B":null,
+                    "maxsx":null,
+                    "debug":false,
+                    "undirected":false
                 }
             ],
             "gs": [
@@ -433,7 +438,12 @@
                         0.2,
                         0.35,
                         0.45
-                    ]
+                    ],
+                    "test":"mi",
+                    "B":null,
+                    "maxsx":null,
+                    "debug":false,
+                    "undirected":false
                 }
             ],
             "tabu": [
