--- a/config/sample_configs/config.sample.gauss.json
+++ b/config/sample_configs/config.sample.gauss.json
@@ -421,7 +421,12 @@
                         0.2,
                         0.35,
                         0.45
-                    ]
+                    ],
+                    "test":"cor",
+                    "B":null,
+                    "maxsx":null,
+                    "debug":false,
+                    "undirected":false
                 }
             ],
             "gs": [
@@ -434,7 +439,12 @@
                         0.2,
                         0.35,
                         0.45
-                    ]
+                    ],
+                    "test":"cor",
+                    "B":null,
+                    "maxsx":null,
+                    "debug":false,
+                    "undirected":false
                 }
             ],
             "tabu": [
