Added test parameter fomr mmhc.

--- a/config/sample_configs/config.sample.binary.json
+++ b/config/sample_configs/config.sample.binary.json
@@ -407,7 +407,8 @@
                         0.2,
                         0.35,
                         0.45
-                    ]
+                    ],
+                    "test":"mi"
                 }
             ],
             "interiamb": [
