--- a/config/sample_configs/config.sample.gauss.json
+++ b/config/sample_configs/config.sample.gauss.json
@@ -408,7 +408,8 @@
                         0.2,
                         0.35,
                         0.45
-                    ]
+                    ],
+                    "test":"cor"
                 }
             ],
             "interiamb": [
